# task0_maco

./: README.md  pyproject.toml
maco_task_0/: main.py
tests/: test_maco_task_0.py
