[tool.poetry]
name = "maco_task_0"
version = "0.1.0"
description = "Maco recruitment task"
authors = ["Zbigniew Polito"]

[tool.poetry.dependencies]
python = "^3.8.7"
pytest = "^6.2.2"
click = "^7.1.2"
ortools = "^8.1.8487"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = true
in-project = true